# wallet

./: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
src/: .dockerignore  Dockerfile  requirements-dev.txt  requirements.txt
src/app/: app_logger.py  main.py
src/app/api/: routers.py  schemes.py  views.py  wallets.py
src/app/db_adapters/: migrate.py  postgres.py
src/app/db_adapters/migrations/: 0_init_database.sql
src/app/wallets/: db_queries.py  models.py  routers.py  schemas.py
src/tests/: conftest.py  fixtures.py  logger.py  test_wallet.py  test_wallets.py
