[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "fastapi",
    "granian[reload]",
    "asyncpg"
]
authors = [{name = "Klimov Artem", email = "artemklimowwork@gmail.com"}]
description = "Console utility for work with measurment instruments database"

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "requests",
    "pre-commit",
    "ruff",
    "ty",
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

exclude = [
    "__pycache__",
    "*venv/",
    ".venv",
    "venv",
    ".env",
    "ruff_cache",
    ".git",
    ".vscode",
]

line-length = 120
indent-width = 4
show-fixes = true


[tool.ruff.lint]
select = []
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
