[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "fastapi==0.121.1",
    "granian[reload]==2.5.7",
    "asyncpg==0.30.0",
    "databases[postgresql]"
]
authors = [{name = "Klimov Artem", email = "artemklimowwork@gmail.com"}]
description = "Console utility for work with measurment instruments database"

[project.optional-dependencies]
dev = [
    "pytest==9.0.0",
    "httpx==0.28.1",
    "requests==2.32.5",
    "pre-commit==4.4.0",
    "ruff==0.14.4",
    "ty==0.0.1a25",
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

exclude = [
    "__pycache__",
    "*venv/",
    ".venv",
    "venv",
    ".env",
    "ruff_cache",
    ".git",
    ".vscode",
]

line-length = 120
indent-width = 4
show-fixes = true


[tool.ruff.lint]
select = []
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"


[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
