[build-system]
requires = ["setuptools>=61.0.0, <69.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wallet"
version = "0.0.1"
requires-python = ">= 3.10"
dependencies = [
    "asyncpg",
    "fastapi[standard]",
    "granian",
]
authors = [{name = "Klimov Artem", email = "artemklimowwork@gmail.com"}]
description = "Console utility for work with measurment instruments database"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "pre-commit",
    "ruff",
    "ty",
]

[tool.ruff]
cache-dir = "~/.cache/ruff"

exclude = [
    "__pycache__",
    "*venv/",
    ".venv",
    "venv",
    ".env",
    "ruff_cache",
    "pytest_cache",
    ".git",
    ".vscode",
]

line-length = 120
indent-width = 4
show-fixes = true


[tool.ruff.lint]
select = []
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
lines-between-types = 1
lines-after-imports = 2
known-first-party = ["src"]
known-third-party = ["*venv/lib/python*/site-packages"]

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
pythonpath = ["src", "tests"]
consider_namespace_packages = "True"
